# AB_U20

./: .gitignore  CMakeLists.txt  CitaMedica.cpp  CitaMedica.h  Fecha.cpp  Fecha.h  GeneradorDatosHospital.xlsx  GestionCitas.cpp  GestionCitas.h  GestionDatos.cpp  GestionDatos.h  GestionMedicos.cpp  GestionMedicos.h  GestionPacientes.cpp  GestionPacientes.h  GestionPersonas.h  Hospital.cpp  Hospital_old.cpp  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  Persona.h  README.md  SistemaHospital.cpp  SistemaHospital.h  datos_hospital.txt  yes.cpp  yes2.cpp
output/: datos_hospital.txt
